--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.0.7
   image_picker: ^0.8.1+1
-  path_provider: ^2.0.2
-  pin_code_fields: ^8.0.1
   firebase_auth: ^4.14.0
   firebase_core: ^2.22.0
   firebase_storage: ^11.5.1
+  shared_preferences: ^2.2.2
+  graphql_flutter: ^5.1.2
 
 dev_dependencies:
   flutter_test:
